# calc_example_mod

./: Makefile  README.md  calculate.c  calculate_module.c  calculate_module.h  gcd.c
ut/: CMakeLists.txt  calculate_test.cpp  run_coverage.sh
ut/mock/: calculate_module_mocks.h
